--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "heroku-postbuild": "yarn run build"
+    "heroku-postbuild": "yarn run build",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
