--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "webpack",
     "dev-server": "webpack-dev-server",
     "heroku-postbuild": "yarn run build",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "push-dir": "push-dir --dir=public --branch=gh-pages"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,6 +20,7 @@
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "push-dir": "^0.4.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
