--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "push-dir": "push-dir --dir=public --branch=gh-pages"
   },
-  "homepage": "goldenhsu.me/Dincider",
+  "homepage": "http://goldenhsu.me/Dincider",
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
